[frontend] fix: layout break in css, replace zod validation to email, change name to hive

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -318,7 +318,7 @@
 }
 
 html, body, #root { height: 100%; }
-body { overflow: hidden; }          
+body { overflow-x: hidden; }          
 #root { display: flex; }
 
 body {
